Fixed add subject on mobile and tablet

--- a/src/component/popup/index.css
+++ b/src/component/popup/index.css
@@ -215,9 +215,19 @@
         display: none;
     }
 }
-
 @media (max-width: 1025px) {
     #popup-content #add-subject #department-choose {
+        display: none;
+    }
+}
+
+@media (min-width: 1025px) {
+    #popup-content #add-subject #subject-choose-select {
+        display: none;
+    }
+}
+@media (max-width: 1025px) {
+    #popup-content #add-subject #subject-choose {
         display: none;
     }
 }
